# ConnectFour-Assignment

./: CMakeLists.txt  README.md
ConnectFour/: project.godot
ConnectFour/Fonts/: NotoSans.tres
ConnectFour/GDNativeLibraries/: ConnectFourScripts.tres  FourInARowScripts.tres
ConnectFour/Scenes/: AIWinScene.tscn  DrawScene.tscn  GameScene.tscn  PlayerWinScene.tscn  SceneManager.tscn
ConnectFour/Scenes/Objects/: Token.tscn
ConnectFour/Scripts/: BoardController.gdns  SceneManager.gdns
FourInARow/: project.godot
FourInARow/Fonts/: NotoSans.tres
FourInARow/Scenes/: GameScene.tscn
FourInARow/Scenes/Objects/: Tile.tscn
FourInARow/Sprites/: red_token.png.import  white_token.png.import  yellow_token.png.import
FourInARow/Sprites/Tokens/Bronze/: Bronze_21.png.import  Bronze_22.png.import  Bronze_23.png.import  Bronze_24.png.import  Bronze_25.png.import  Bronze_26.png.import  Bronze_27.png.import  Bronze_28.png.import  Bronze_29.png.import  Bronze_30.png.import
FourInARow/Sprites/Tokens/Gold/: Gold_21.png.import  Gold_22.png.import  Gold_23.png.import  Gold_24.png.import  Gold_25.png.import  Gold_26.png.import  Gold_27.png.import  Gold_28.png.import  Gold_29.png.import  Gold_30.png.import
build-binaries/windows/: Connect Four.pck
scripts-source/: board.cpp  board.h  board_controller.cpp  board_controller.h  lib.cpp  minimax.cpp  minimax.h  scene_manager.cpp  scene_manager.h
